--- a/tips/index.html
+++ b/tips/index.html
@@ -179,6 +179,14 @@
 </div>
 <div class="content">
   
+  <h2>2016</h2>
+  <ul>
+  
+    <li><time>2016/06/16, 12:33</time> - <a href="http://ops.m114.org/tips/git-common-command/">Git常用命令备忘</a></li>
+
+  
+  </ul>
+  
   <h2>2015</h2>
   <ul>
   
