--- a/tips/git-common-command/index.html
+++ b/tips/git-common-command/index.html
@@ -259,6 +259,36 @@ git format-patch -1 commit版本号
 git apply xxx.patch
 </code></pre>
 
+<h3 id="6-使用-rebase-i-合并提交:5a8bf9b63fca471d5d97b4fc513a9dbe">6. 使用 rebase -i 合并提交</h3>
+
+<p><strong>合并最近两个commit</strong></p>
+
+<pre><code>git rebase -i HEAD~~
+</code></pre>
+
+<p>默认的文字编辑器会自动开启，将看的HEAD 到 HEAD~~ 的提交</p>
+
+<pre><code>pick 7118c53 添加commit1的说明
+pick ce32af7 添加commit2的说明
+
+#
+# Commands:
+#  p, pick = use commit
+#  r, reword = use commit, but edit the commit message
+#  e, edit = use commit, but stop for amending
+#  s, squash = use commit, but meld into previous commit
+#  f, fixup = like &quot;squash&quot;, but discard this commit's log message
+#  x, exec = run command (the rest of the line) using shell
+#
+# If you remove a line here THAT COMMIT WILL BE LOST.
+# However, if you remove everything, the rebase will be aborted.
+#
+</code></pre>
+
+<p>将第二行的 &ldquo;pick&rdquo; 改为 &ldquo;squash&rdquo;, 保存后退出。由于合并后要提交，所以编辑器会提醒您编辑这个最新的提交信息，请编辑信息后保存并退出。</p>
+
+<p>这样，两个提交就合并成一个提交了。请用 log 命令确认历史记录。</p>
+
 </div>
 
 </div>
