--- a/topics/ceph/index.html
+++ b/topics/ceph/index.html
@@ -37,7 +37,7 @@
 
   
   
-  <link rel="alternate" type="application/rss+xml" title="ops" href="https://ops.m114.org/tags/ceph/index.xml" />
+  <link rel="alternate" type="application/rss+xml" title="ops" href="https://ops.m114.org/topics/ceph/index.xml" />
   
 
   
@@ -100,7 +100,7 @@
 
     
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="https://ops.m114.org/tags/ceph/index.xml"><i class="fa fa-rss fa-fw"></i>RSS</a>
+      <a class="pure-menu-link" href="https://ops.m114.org/topics/ceph/index.xml"><i class="fa fa-rss fa-fw"></i>RSS</a>
     </li>
     
 
