--- a/about/index.html
+++ b/about/index.html
@@ -223,6 +223,7 @@
 <li><a href="https://github.com/openresty/lua-resty-dns">lua-resty-dns</a></li>
 <li><a href="https://github.com/openresty/lua-resty-lock">lua-resty-lock</a></li>
 <li><a href="https://github.com/juce/lua-resty-shell">lua-resty-shell</a></li>
+<li><a href="https://github.com/bungle/lua-resty-template">lua-resty-template</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
