--- a/about/index.html
+++ b/about/index.html
@@ -224,6 +224,8 @@
 <li><a href="https://github.com/openresty/lua-resty-lock">lua-resty-lock</a></li>
 <li><a href="https://github.com/juce/lua-resty-shell">lua-resty-shell</a></li>
 <li><a href="https://github.com/bungle/lua-resty-template">lua-resty-template</a></li>
+<li><a href="https://github.com/openresty/lua-upstream-nginx-module">lua-upstream-nginx-module</a></li>
+<li><a href="https://github.com/openresty/lua-resty-upstream-healthcheck">lua-resty-upstream-healthcheck</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
