--- a/about/index.html
+++ b/about/index.html
@@ -203,6 +203,7 @@
 <ul>
 <li><a href="https://github.com/pallets/flask">Flask</a></li>
 <li><a href="https://github.com/sdispater/flask-orator">Flask-Orator</a></li>
+<li><a href="https://github.com/channelcat/sanic">Sanic</a></li>
 </ul>
 
 <h2 id="ngx-lua常用模块">ngx_lua常用模块</h2>
@@ -226,12 +227,16 @@
 <li><a href="https://github.com/bungle/lua-resty-template">lua-resty-template</a></li>
 <li><a href="https://github.com/openresty/lua-upstream-nginx-module">lua-upstream-nginx-module</a></li>
 <li><a href="https://github.com/openresty/lua-resty-upstream-healthcheck">lua-resty-upstream-healthcheck</a></li>
+<li><a href="https://github.com/upyun/lua-resty-checkups">lua-resty-checkups</a></li>
+<li><a href="https://github.com/agentzh/lua-resty-balancer">lua-resty-balancer</a></li>
+<li><a href="https://github.com/thibaultcha/lua-resty-jit-uuid">lua-resty-jit-uuid</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
 
 <ul>
 <li><a href="https://github.com/sumory/lor">Lor</a></li>
+<li><a href="http://tylerneylon.com/a/learn-lua/">Learn Lua in 15 Minutes</a></li>
 </ul>
 
 </div>
