--- a/topics/index.html
+++ b/topics/index.html
@@ -213,6 +213,11 @@
     </li>
   
     <li>
+      <a href="go">go</a>
+      <span>&#40;1&#41;</span>
+    </li>
+  
+    <li>
       <a href="openresty">openresty</a>
       <span>&#40;1&#41;</span>
     </li>
