--- a/topics/index.html
+++ b/topics/index.html
@@ -213,7 +213,7 @@
     </li>
   
     <li>
-      <a href="go">go</a>
+      <a href="golang">golang</a>
       <span>&#40;1&#41;</span>
     </li>
   
