--- a/about/index.html
+++ b/about/index.html
@@ -196,6 +196,8 @@
 <li><a href="https://github.com/kennethreitz/tablib">tablib</a></li>
 <li><a href="https://pypi.python.org/pypi/yapf">yapf</a></li>
 <li><a href="https://pypi.python.org/pypi/keyring">keyring</a></li>
+<li><a href="https://pypi.python.org/pypi/ahocorasick">ahocorasick</a></li>
+<li><a href="https://pypi.python.org/pypi/esmre">esmre</a></li>
 </ul>
 
 <h2 id="python-web开发">Python Web开发</h2>
@@ -244,6 +246,14 @@
 
 <ul>
 <li><a href="https://github.com/gin-gonic/gin">Gin</a></li>
+</ul>
+
+<h2 id="tools">Tools</h2>
+
+<ul>
+<li><a href="https://github.com/chihaya/chihaya">Go BitTorrent Tracker, Facebook/CoreOS used</a></li>
+<li><a href="https://github.com/GrappigPanda/notorious">Go BitTorrent Tracker</a></li>
+<li><a href="https://github.com/anacrolix/torrent">Go Full-featured BitTorrent client package and utilities</a></li>
 </ul>
 
 </div>
