--- a/about/index.html
+++ b/about/index.html
@@ -186,6 +186,7 @@
 <ul>
 <li><a href="https://moonbingbing.gitbooks.io/openresty-best-practices/content/index.html">OpenResty最佳实践</a></li>
 <li><a href="https://imququ.com">Jerry Qu HTTPS最佳实践</a></li>
+<li><a href="https://github.com/firehol/blocklist-ipsets">IP黑名单</a></li>
 </ul>
 
 <h2 id="python常用模块">Python常用模块</h2>
