--- a/about/index.html
+++ b/about/index.html
@@ -193,6 +193,7 @@
 
 <ul>
 <li><a href="https://github.com/kennethreitz/requests">requests</a></li>
+<li><a href="https://github.com/kennethreitz/requests-html">requests-html</a></li>
 <li><a href="https://github.com/kennethreitz/records">records</a></li>
 <li><a href="https://github.com/kennethreitz/tablib">tablib</a></li>
 <li><a href="https://pypi.python.org/pypi/yapf">yapf</a></li>
@@ -234,6 +235,7 @@
 <li><a href="https://github.com/agentzh/lua-resty-balancer">lua-resty-balancer</a></li>
 <li><a href="https://github.com/thibaultcha/lua-resty-jit-uuid">lua-resty-jit-uuid</a></li>
 <li><a href="https://github.com/thibaultcha/lua-resty-mlcache">lua-resty-mlcache</a></li>
+<li><a href="https://github.com/hamishforbes/lua-resty-iputils">lua-resty-iputils</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
@@ -247,6 +249,13 @@
 
 <ul>
 <li><a href="https://github.com/gin-gonic/gin">Gin</a></li>
+</ul>
+
+<h2 id="go常用模块">Go常用模块</h2>
+
+<ul>
+<li><a href="https://github.com/pquerna/otp">otp</a></li>
+<li><a href="https://github.com/spf13/viper">viper</a></li>
 </ul>
 
 <h2 id="tools">Tools</h2>
