--- a/about/index.html
+++ b/about/index.html
@@ -236,6 +236,7 @@
 <li><a href="https://github.com/thibaultcha/lua-resty-jit-uuid">lua-resty-jit-uuid</a></li>
 <li><a href="https://github.com/thibaultcha/lua-resty-mlcache">lua-resty-mlcache</a></li>
 <li><a href="https://github.com/hamishforbes/lua-resty-iputils">lua-resty-iputils</a></li>
+<li><a href="https://github.com/doujiang24/lua-resty-rsa">lua-resty-rsa</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
@@ -256,6 +257,7 @@
 <ul>
 <li><a href="https://github.com/pquerna/otp">otp</a></li>
 <li><a href="https://github.com/spf13/viper">viper</a></li>
+<li><a href="https://github.com/goofansu/wego">屏蔽字过滤服务</a></li>
 </ul>
 
 <h2 id="tools">Tools</h2>
@@ -264,6 +266,7 @@
 <li><a href="https://github.com/chihaya/chihaya">Go BitTorrent Tracker, Facebook/CoreOS used</a></li>
 <li><a href="https://github.com/GrappigPanda/notorious">Go BitTorrent Tracker</a></li>
 <li><a href="https://github.com/anacrolix/torrent">Go Full-featured BitTorrent client package and utilities</a></li>
+<li><a href="https://github.com/laher/goxc">跨平台生成工具</a></li>
 </ul>
 
 </div>
