--- a/about/index.html
+++ b/about/index.html
@@ -237,6 +237,7 @@
 <li><a href="https://github.com/thibaultcha/lua-resty-mlcache">lua-resty-mlcache</a></li>
 <li><a href="https://github.com/hamishforbes/lua-resty-iputils">lua-resty-iputils</a></li>
 <li><a href="https://github.com/doujiang24/lua-resty-rsa">lua-resty-rsa</a></li>
+<li><a href="https://github.com/jkeys089/lua-resty-hmac">lua-resty-hmac</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
