--- a/about/index.html
+++ b/about/index.html
@@ -238,6 +238,8 @@
 <li><a href="https://github.com/hamishforbes/lua-resty-iputils">lua-resty-iputils</a></li>
 <li><a href="https://github.com/doujiang24/lua-resty-rsa">lua-resty-rsa</a></li>
 <li><a href="https://github.com/jkeys089/lua-resty-hmac">lua-resty-hmac</a></li>
+<li><a href="https://github.com/cloudflare/nginx-google-oauth">nginx-google-oauth</a></li>
+<li><a href="https://github.com/cloudflare/lua-aho-corasick">lua-aho-corasick</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
@@ -259,6 +261,7 @@
 <li><a href="https://github.com/pquerna/otp">otp</a></li>
 <li><a href="https://github.com/spf13/viper">viper</a></li>
 <li><a href="https://github.com/goofansu/wego">屏蔽字过滤服务</a></li>
+<li><a href="https://github.com/tidwall/gjson">gjson</a></li>
 </ul>
 
 <h2 id="tools">Tools</h2>
