--- a/about/index.html
+++ b/about/index.html
@@ -262,6 +262,7 @@
 <li><a href="https://github.com/spf13/viper">viper</a></li>
 <li><a href="https://github.com/goofansu/wego">屏蔽字过滤服务</a></li>
 <li><a href="https://github.com/tidwall/gjson">gjson</a></li>
+<li><a href="https://github.com/didi/gendry">gendry</a></li>
 </ul>
 
 <h2 id="tools">Tools</h2>
@@ -271,6 +272,8 @@
 <li><a href="https://github.com/GrappigPanda/notorious">Go BitTorrent Tracker</a></li>
 <li><a href="https://github.com/anacrolix/torrent">Go Full-featured BitTorrent client package and utilities</a></li>
 <li><a href="https://github.com/laher/goxc">跨平台生成工具</a></li>
+<li><a href="https://github.com/uber/go-torch">go火焰图</a></li>
+<li><a href="https://github.com/radondb/xenon">QingCloud MySQL Plus开源版(GTID + Raft + Semi-Sync-Replication)</a></li>
 </ul>
 
 </div>
