--- a/about/index.html
+++ b/about/index.html
@@ -273,6 +273,7 @@
 <li><a href="https://github.com/anacrolix/torrent">Go Full-featured BitTorrent client package and utilities</a></li>
 <li><a href="https://github.com/laher/goxc">跨平台生成工具</a></li>
 <li><a href="https://github.com/uber/go-torch">go火焰图</a></li>
+<li><a href="https://github.com/jx-sec/jxwaf">jxwaf</a></li>
 <li><a href="https://github.com/radondb/xenon">QingCloud MySQL Plus开源版(GTID + Raft + Semi-Sync-Replication)</a></li>
 </ul>
 
