--- a/about/index.html
+++ b/about/index.html
@@ -240,6 +240,7 @@
 <li><a href="https://github.com/jkeys089/lua-resty-hmac">lua-resty-hmac</a></li>
 <li><a href="https://github.com/cloudflare/nginx-google-oauth">nginx-google-oauth</a></li>
 <li><a href="https://github.com/cloudflare/lua-aho-corasick">lua-aho-corasick</a></li>
+<li><a href="https://github.com/jx-sec/jxwaf">jxwaf</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
@@ -273,8 +274,9 @@
 <li><a href="https://github.com/anacrolix/torrent">Go Full-featured BitTorrent client package and utilities</a></li>
 <li><a href="https://github.com/laher/goxc">跨平台生成工具</a></li>
 <li><a href="https://github.com/uber/go-torch">go火焰图</a></li>
-<li><a href="https://github.com/jx-sec/jxwaf">jxwaf</a></li>
 <li><a href="https://github.com/radondb/xenon">QingCloud MySQL Plus开源版(GTID + Raft + Semi-Sync-Replication)</a></li>
+<li><a href="https://github.com/meqio/meq">MQ: meq</a></li>
+<li><a href="https://github.com/gocolly/colly">Go爬虫框架: colly</a></li>
 </ul>
 
 </div>
