--- a/about/index.html
+++ b/about/index.html
@@ -277,6 +277,8 @@
 <li><a href="https://github.com/radondb/xenon">QingCloud MySQL Plus开源版(GTID + Raft + Semi-Sync-Replication)</a></li>
 <li><a href="https://github.com/meqio/meq">MQ: meq</a></li>
 <li><a href="https://github.com/gocolly/colly">Go爬虫框架: colly</a></li>
+<li><a href="https://github.com/coredns/coredns">coredns</a></li>
+<li><a href="https://github.com/colinmarc/hdfs">A native go client for HDFS</a></li>
 </ul>
 
 </div>
