--- a/about/index.html
+++ b/about/index.html
@@ -241,6 +241,7 @@
 <li><a href="https://github.com/cloudflare/nginx-google-oauth">nginx-google-oauth</a></li>
 <li><a href="https://github.com/cloudflare/lua-aho-corasick">lua-aho-corasick</a></li>
 <li><a href="https://github.com/jx-sec/jxwaf">jxwaf</a></li>
+<li><a href="https://github.com/GUI/lua-resty-mail">lua-resty-mail</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
