--- a/about/index.html
+++ b/about/index.html
@@ -242,6 +242,9 @@
 <li><a href="https://github.com/cloudflare/lua-aho-corasick">lua-aho-corasick</a></li>
 <li><a href="https://github.com/jx-sec/jxwaf">jxwaf</a></li>
 <li><a href="https://github.com/GUI/lua-resty-mail">lua-resty-mail</a></li>
+<li><a href="https://github.com/iresty/apisix">apisix</a></li>
+<li><a href="https://github.com/iresty/lua-resty-etcd">lua-resty-etcd</a></li>
+<li><a href="https://github.com/iresty/lua-resty-libr3">lua-resty-lubr3</a></li>
 </ul>
 
 <h2 id="ngx-lua-web开发">ngx_lua Web开发</h2>
@@ -265,6 +268,7 @@
 <li><a href="https://github.com/goofansu/wego">屏蔽字过滤服务</a></li>
 <li><a href="https://github.com/tidwall/gjson">gjson</a></li>
 <li><a href="https://github.com/didi/gendry">gendry</a></li>
+<li><a href="https://github.com/json-iterator/go">json-iterator</a></li>
 </ul>
 
 <h2 id="tools">Tools</h2>
