--- a/about/index.html
+++ b/about/index.html
@@ -255,7 +255,7 @@
 <li><a href="https://github.com/Kong/lua-resty-dns-client">lua-resty-dns-client</a></li>
 <li><a href="https://github.com/iresty/apisix">apisix</a></li>
 <li><a href="https://github.com/iresty/lua-resty-etcd">lua-resty-etcd</a></li>
-<li><a href="https://github.com/iresty/lua-resty-ip-matcher">lua-resty-ip-matcher(hash实现)</a></li>
+<li><a href="https://github.com/iresty/lua-resty-ipmatcher">lua-resty-ipmatcher(hash实现)</a></li>
 </ul></li>
 </ul>
 
