--- a/about/index.html
+++ b/about/index.html
@@ -252,10 +252,11 @@
 <li><a href="https://github.com/jx-sec/jxwaf">jxwaf</a></li>
 <li><a href="https://github.com/GUI/lua-resty-mail">lua-resty-mail</a></li>
 <li><a href="https://github.com/jkeys089/lua-resty-resolver">lua-resty-resolver</a></li>
-<li><a href="https://github.com/Kong/lua-resty-dns-client">lua-resty-dns-client</a></li>
-<li><a href="https://github.com/iresty/apisix">apisix</a></li>
-<li><a href="https://github.com/iresty/lua-resty-etcd">lua-resty-etcd</a></li>
-<li><a href="https://github.com/iresty/lua-resty-ipmatcher">lua-resty-ipmatcher(hash实现)</a></li>
+<li><a href="https://github.com/apache/incubator-apisix">apisix</a></li>
+<li><a href="https://github.com/api7/lua-resty-etcd">lua-resty-etcd</a></li>
+<li><a href="https://github.com/api7/lua-resty-ipmatcher">lua-resty-ipmatcher(hash实现)</a></li>
+<li><a href="https://github.com/api7/jsonschema">jsonschema</a></li>
+<li><a href="https://github.com/fffonion/lua-resty-acme">lua-resty-acme</a></li>
 </ul></li>
 </ul>
 
@@ -270,6 +271,7 @@
 
 <ul>
 <li><a href="https://github.com/gin-gonic/gin">Gin</a></li>
+<li><a href="https://github.com/gofiber/fiber">fiber</a></li>
 </ul>
 
 <h2 id="go常用模块">Go常用模块</h2>
@@ -283,6 +285,10 @@
 <li><a href="https://github.com/json-iterator/go">json-iterator</a></li>
 <li><a href="https://github.com/minio/sio">sio</a></li>
 <li><a href="https://github.com/cloudflare/tableflip">cloudflare Go程序平滑重启</a></li>
+<li><a href="https://github.com/lukechampine/adiantum">adiantum加密库</a></li>
+<li><a href="https://github.com/panjf2000/ants">ants</a></li>
+<li><a href="https://github.com/coocood/freecache">freecache</a></li>
+<li><a href="https://github.com/santhosh-tekuri/jsonschema">go jsonschema</a></li>
 </ul>
 
 <h2 id="tools">Tools</h2>
@@ -298,6 +304,8 @@
 <li><a href="https://github.com/gocolly/colly">Go爬虫框架: colly</a></li>
 <li><a href="https://github.com/coredns/coredns">coredns</a></li>
 <li><a href="https://github.com/colinmarc/hdfs">A native go client for HDFS</a></li>
+<li><a href="https://github.com/fperf/redis">redis压测工具</a></li>
+<li><a href="https://github.com/Netflix-Skunkworks/bpftoolkit">Netflix bpftoolkit</a></li>
 </ul>
 
 </div>
