--- a/about/index.html
+++ b/about/index.html
@@ -257,6 +257,9 @@
 <li><a href="https://github.com/api7/lua-resty-ipmatcher">lua-resty-ipmatcher(hash实现)</a></li>
 <li><a href="https://github.com/api7/jsonschema">jsonschema</a></li>
 <li><a href="https://github.com/fffonion/lua-resty-acme">lua-resty-acme</a></li>
+<li><a href="https://github.com/apache/skywalking-nginx-lua">skywalking-nginx-lua</a></li>
+<li><a href="https://github.com/manoelcampos/xml2lua">xml2lua</a></li>
+<li><a href="https://github.com/TheNorthMemory/WXBizMsgCrypt">微信对接解密/加密</a></li>
 </ul></li>
 </ul>
 
