--- a/about/index.html
+++ b/about/index.html
@@ -200,6 +200,7 @@
 <li><a href="https://pypi.python.org/pypi/keyring">keyring</a></li>
 <li><a href="https://pypi.python.org/pypi/ahocorasick">ahocorasick</a></li>
 <li><a href="https://pypi.python.org/pypi/esmre">esmre</a></li>
+<li><a href="https://github.com/JaidedAI/EasyOCR">EasyOCR</a></li>
 </ul>
 
 <h2 id="python-web开发">Python Web开发</h2>
@@ -283,6 +284,7 @@
 <li><a href="https://github.com/pquerna/otp">otp</a></li>
 <li><a href="https://github.com/spf13/viper">viper</a></li>
 <li><a href="https://github.com/sunny352/wego">屏蔽字过滤服务</a></li>
+<li><a href="https://github.com/tal-tech/go-zero/tree/master/core/stringx">屏蔽字过滤模块</a></li>
 <li><a href="https://github.com/tidwall/gjson">gjson</a></li>
 <li><a href="https://github.com/didi/gendry">gendry</a></li>
 <li><a href="https://github.com/json-iterator/go">json-iterator</a></li>
