--- a/about/index.html
+++ b/about/index.html
@@ -201,6 +201,7 @@
 <li><a href="https://pypi.python.org/pypi/ahocorasick">ahocorasick</a></li>
 <li><a href="https://pypi.python.org/pypi/esmre">esmre</a></li>
 <li><a href="https://github.com/JaidedAI/EasyOCR">EasyOCR</a></li>
+<li><a href="https://github.com/NathanUA/U-2-Net">U-2-Net</a></li>
 </ul>
 
 <h2 id="python-web开发">Python Web开发</h2>
@@ -261,6 +262,7 @@
 <li><a href="https://github.com/apache/skywalking-nginx-lua">skywalking-nginx-lua</a></li>
 <li><a href="https://github.com/manoelcampos/xml2lua">xml2lua</a></li>
 <li><a href="https://github.com/TheNorthMemory/WXBizMsgCrypt">微信对接解密/加密</a></li>
+<li><a href="https://github.com/fffonion/lua-resty-multiplexer">lua-resty-multiplexer</a></li>
 </ul></li>
 </ul>
 
@@ -312,6 +314,7 @@
 <li><a href="https://github.com/fperf/redis">redis压测工具</a></li>
 <li><a href="https://github.com/Netflix-Skunkworks/bpftoolkit">Netflix bpftoolkit</a></li>
 <li><a href="https://github.com/FiloSottile/mkcert">mkcert</a></li>
+<li><a href="https://github.com/orf/gping">ping动态图形化</a></li>
 </ul>
 
 </div>
