--- a/about/index.html
+++ b/about/index.html
@@ -202,6 +202,7 @@
 <li><a href="https://pypi.python.org/pypi/esmre">esmre</a></li>
 <li><a href="https://github.com/JaidedAI/EasyOCR">EasyOCR</a></li>
 <li><a href="https://github.com/NathanUA/U-2-Net">U-2-Net</a></li>
+<li><a href="https://github.com/xlwings/xlwings">Excel</a></li>
 </ul>
 
 <h2 id="python-web开发">Python Web开发</h2>
@@ -296,6 +297,7 @@
 <li><a href="https://github.com/panjf2000/ants">ants</a></li>
 <li><a href="https://github.com/coocood/freecache">freecache</a></li>
 <li><a href="https://github.com/santhosh-tekuri/jsonschema">go jsonschema</a></li>
+<li><a href="https://github.com/ssrathi/go-attr">go-attr</a></li>
 </ul>
 
 <h2 id="tools">Tools</h2>
@@ -315,6 +317,9 @@
 <li><a href="https://github.com/Netflix-Skunkworks/bpftoolkit">Netflix bpftoolkit</a></li>
 <li><a href="https://github.com/FiloSottile/mkcert">mkcert</a></li>
 <li><a href="https://github.com/orf/gping">ping动态图形化</a></li>
+<li><a href="https://github.com/thunderbarca/Caesar">敏感文件发现工具</a></li>
+<li><a href="https://github.com/google/gops">gops</a></li>
+<li><a href="https://github.com/feiin/go-xss">go-xss</a></li>
 </ul>
 
 </div>
