--- a/about/index.html
+++ b/about/index.html
@@ -234,6 +234,7 @@
 <li><a href="https://github.com/openresty/lua-upstream-nginx-module">lua-upstream-nginx-module</a></li>
 <li><a href="https://github.com/openresty/lua-resty-upstream-healthcheck">lua-resty-upstream-healthcheck</a></li>
 <li><a href="https://github.com/agentzh/lua-resty-balancer">lua-resty-balancer</a></li>
+<li><a href="https://github.com/openresty/lua-resty-shell">lua-resty-shell</a></li>
 </ul></li>
 
 <li><p>第三方库</p>
@@ -243,7 +244,6 @@
 <li><a href="https://github.com/cloudflare/lua-aho-corasick">lua-aho-corasick</a></li>
 <li><a href="https://github.com/cloudflare/nginx-google-oauth">nginx-google-oauth</a></li>
 <li><a href="https://github.com/ledgetech/lua-resty-http">lua-resty-http</a></li>
-<li><a href="https://github.com/tokers/lua-resty-requests">lua-resty-requests</a></li>
 <li><a href="https://github.com/juce/lua-resty-shell">lua-resty-shell</a></li>
 <li><a href="https://github.com/bungle/lua-resty-template">lua-resty-template</a></li>
 <li><a href="https://github.com/upyun/lua-resty-checkups">lua-resty-checkups</a></li>
@@ -255,7 +255,7 @@
 <li><a href="https://github.com/jx-sec/jxwaf">jxwaf</a></li>
 <li><a href="https://github.com/GUI/lua-resty-mail">lua-resty-mail</a></li>
 <li><a href="https://github.com/jkeys089/lua-resty-resolver">lua-resty-resolver</a></li>
-<li><a href="https://github.com/apache/incubator-apisix">apisix</a></li>
+<li><a href="https://github.com/apache/apisix">apisix</a></li>
 <li><a href="https://github.com/api7/lua-resty-etcd">lua-resty-etcd</a></li>
 <li><a href="https://github.com/api7/lua-resty-ipmatcher">lua-resty-ipmatcher(hash实现)</a></li>
 <li><a href="https://github.com/api7/jsonschema">jsonschema</a></li>
@@ -264,6 +264,7 @@
 <li><a href="https://github.com/manoelcampos/xml2lua">xml2lua</a></li>
 <li><a href="https://github.com/TheNorthMemory/WXBizMsgCrypt">微信对接解密/加密</a></li>
 <li><a href="https://github.com/fffonion/lua-resty-multiplexer">lua-resty-multiplexer</a></li>
+<li><a href="https://github.com/fffonion/lua-resty-sniproxy">lua-resty-sniproxy</a></li>
 </ul></li>
 </ul>
 
