--- a/topics/index.html
+++ b/topics/index.html
@@ -224,22 +224,22 @@
   
   
     <li>
-      <a href="ceph">ceph</a>
+      <a href="Ceph">Ceph</a>
       <span>&#40;5&#41;</span>
     </li>
   
     <li>
-      <a href="mysql">mysql</a>
-      <span>&#40;4&#41;</span>
-    </li>
-  
-    <li>
-      <a href="python">python</a>
+      <a href="MySQL">MySQL</a>
       <span>&#40;3&#41;</span>
     </li>
   
     <li>
-      <a href="tips">tips</a>
+      <a href="Python">Python</a>
+      <span>&#40;3&#41;</span>
+    </li>
+  
+    <li>
+      <a href="Tips">Tips</a>
       <span>&#40;3&#41;</span>
     </li>
   
@@ -254,27 +254,32 @@
     </li>
   
     <li>
-      <a href="centos7">centos7</a>
+      <a href="CentOS7">CentOS7</a>
       <span>&#40;1&#41;</span>
     </li>
   
     <li>
-      <a href="docker">docker</a>
+      <a href="Docker">Docker</a>
       <span>&#40;1&#41;</span>
     </li>
   
     <li>
-      <a href="openresty">openresty</a>
+      <a href="mysql">mysql</a>
       <span>&#40;1&#41;</span>
     </li>
   
     <li>
-      <a href="troubleshooting">troubleshooting</a>
+      <a href="OpenResty">OpenResty</a>
       <span>&#40;1&#41;</span>
     </li>
   
     <li>
-      <a href="zabbix">zabbix</a>
+      <a href="Troubleshooting">Troubleshooting</a>
+      <span>&#40;1&#41;</span>
+    </li>
+  
+    <li>
+      <a href="Zabbix">Zabbix</a>
       <span>&#40;1&#41;</span>
     </li>
   
