--- a/about/index.html
+++ b/about/index.html
@@ -339,6 +339,7 @@
 <li><a href="https://github.com/thunderbarca/Caesar">敏感文件发现工具</a></li>
 <li><a href="https://github.com/google/gops">gops</a></li>
 <li><a href="https://github.com/feiin/go-xss">go-xss</a></li>
+<li><a href="https://github.com/zalando/go-keyring">go-keyring</a></li>
 </ul>
 
 </div>
