--- a/topics/python/index.html
+++ b/topics/python/index.html
@@ -325,8 +325,8 @@ import dis #载入反编译模块,Python内置的 dis.dis(t1) #对应的是while
 
   <p>
   不用连接池的MySQL连接方法
-import MySQLdb conn= MySQLdb.connect(host='127.0.0.1',user='root',passwd='password',db='DB_test',port=3306) cur=conn.cursor() SQL=&quot;select * from table_test&quot; cur.execute(SQL) r=cur.fetchall() cur.close() conn.close() 用连接池后的连接方法
-import MySQLdb from DBUtils.PooledDB import PooledDB pool = PooledDB(MySQLdb,5,host='127.0.0.1',user='root',passwd='password',db='DB_test',port=3306) #5为连接池里的最少连接数 conn = pool.connection() #以后每次需要数据库连接就是用connection()函数获取连接就好了 cur=conn.cursor() SQL=&quot;select * from table_test&quot; cur.execute(SQL) r=cur.fetchall() cur.close() conn.close() PooledDB的参数
+import MySQLdb conn= MySQLdb.connect(host=&#39;127.0.0.1&#39;,user=&#39;root&#39;,passwd=&#39;password&#39;,db=&#39;DB_test&#39;,port=3306) cur=conn.cursor() SQL=&#34;select * from table_test&#34; cur.execute(SQL) r=cur.fetchall() cur.close() conn.close() 用连接池后的连接方法
+import MySQLdb from DBUtils.PooledDB import PooledDB pool = PooledDB(MySQLdb,5,host=&#39;127.0.0.1&#39;,user=&#39;root&#39;,passwd=&#39;password&#39;,db=&#39;DB_test&#39;,port=3306) #5为连接池里的最少连接数 conn = pool.connection() #以后每次需要数据库连接就是用connection()函数获取连接就好了 cur=conn.cursor() SQL=&#34;select * from table_test&#34; cur.execute(SQL) r=cur.fetchall() cur.close() conn.close() PooledDB的参数
  mincached: 最少的空闲连接数，如果空闲连接数小于这个数，pool会创建一个新的连接 maxcached: 最大的空闲连接数，如果空闲连接数大于这个数，pool会关闭空闲连接 maxconnections: 最大的连接数， blocking: 当连接数达到最大的连接数时，在请求连接的时候，如果这个值是True，请求连接的程序会一直等待，直到当前连接数小于最大连接数，如果这个值是False，会报错， maxshared: 当连接数达到这个数，新请求的连接会分享已经分配出去的连接  连接池对性能的提升表现在
  在程序创建连接的时候，可以从一个空闲的连接中获取，不需要重新初始化连接，提升获取连接的速度 关闭连接的时候，把连接放回连接池，而不是真正的关闭，所以可以减少频繁地打开和关闭连接 避免mysql连接数耗尽  DBUtils下载地址：https://pypi.python.org/pypi/DBUtils/
   </p>
@@ -371,8 +371,8 @@ import MySQLdb from DBUtils.PooledDB import PooledDB pool = PooledDB(MySQLdb,5,h
 
   <p>
   列表项由数字、字符串组成，统计重复项
-&gt;&gt;&gt; from collections import defaultdict &gt;&gt;&gt; d = defaultdict(int) &gt;&gt;&gt; for x in [1, 2, 3, 1, 2, 3, 1]: ... d[x] += 1 ... &gt;&gt;&gt; dict(d) {1: 3, 2: 2, 3: 2} &gt;&gt;&gt; &gt;&gt;&gt; c = defaultdict(int) &gt;&gt;&gt; for y in ['a', 'b', 'a', 'c', 'c']: ... c[y] += 1 ... &gt;&gt;&gt; dict(c) {'a': 2, 'c': 2, 'b': 1} 列表项由字典组成，统计某一键值的重复数
-&gt;&gt;&gt; e = defaultdict(int) &gt;&gt;&gt; for x in [{'a': 1, 'b': 1}, {'a': 2, 'b':1}, {'a': 1, 'c': 3}]: .
+&gt;&gt;&gt; from collections import defaultdict &gt;&gt;&gt; d = defaultdict(int) &gt;&gt;&gt; for x in [1, 2, 3, 1, 2, 3, 1]: ... d[x] += 1 ... &gt;&gt;&gt; dict(d) {1: 3, 2: 2, 3: 2} &gt;&gt;&gt; &gt;&gt;&gt; c = defaultdict(int) &gt;&gt;&gt; for y in [&#39;a&#39;, &#39;b&#39;, &#39;a&#39;, &#39;c&#39;, &#39;c&#39;]: ... c[y] += 1 ... &gt;&gt;&gt; dict(c) {&#39;a&#39;: 2, &#39;c&#39;: 2, &#39;b&#39;: 1} 列表项由字典组成，统计某一键值的重复数
+&gt;&gt;&gt; e = defaultdict(int) &gt;&gt;&gt; for x in [{&#39;a&#39;: 1, &#39;b&#39;: 1}, {&#39;a&#39;: 2, &#39;b&#39;:1}, {&#39;a&#39;: 1, &#39;c&#39;: 3}]: .
   </p>
 
   
