--- a/about/index.html
+++ b/about/index.html
@@ -311,14 +311,15 @@
 <li><a href="https://github.com/tal-tech/go-zero/tree/master/core/stringx">屏蔽字过滤模块</a></li>
 <li><a href="https://github.com/tidwall/gjson">gjson</a></li>
 <li><a href="https://github.com/didi/gendry">gendry</a></li>
-<li><a href="https://github.com/json-iterator/go">json-iterator</a></li>
-<li><a href="https://github.com/minio/sio">sio</a></li>
+<li><a href="https://github.com/json-iterator/go">⭐️json-iterator</a></li>
+<li><a href="https://github.com/minio/sio">⭐️sio</a></li>
 <li><a href="https://github.com/cloudflare/tableflip">cloudflare Go程序平滑重启</a></li>
 <li><a href="https://github.com/lukechampine/adiantum">adiantum加密库</a></li>
 <li><a href="https://github.com/panjf2000/ants">ants</a></li>
 <li><a href="https://github.com/coocood/freecache">freecache</a></li>
 <li><a href="https://github.com/santhosh-tekuri/jsonschema">go jsonschema</a></li>
 <li><a href="https://github.com/ssrathi/go-attr">go-attr</a></li>
+<li><a href="https://github.com/google/gopacket">⭐️gopacket</a></li>
 </ul>
 <h2 id="tools">Tools</h2>
 <ul>
