--- a/about/index.html
+++ b/about/index.html
@@ -332,7 +332,7 @@
 <li><a href="https://github.com/meqio/meq">MQ: meq</a></li>
 <li><a href="https://github.com/gocolly/colly">Go爬虫框架: colly</a></li>
 <li><a href="https://github.com/coredns/coredns">coredns</a></li>
-<li><a href="https://github.com/colinmarc/hdfs">A native go client for HDFS</a></li>
+<li><a href="https://github.com/colinmarc/hdfs">⭐️A native go client for HDFS</a></li>
 <li><a href="https://github.com/fperf/redis">redis压测工具</a></li>
 <li><a href="https://github.com/Netflix-Skunkworks/bpftoolkit">Netflix bpftoolkit</a></li>
 <li><a href="https://github.com/FiloSottile/mkcert">mkcert</a></li>
