--- a/about/index.html
+++ b/about/index.html
@@ -221,7 +221,7 @@
 </ul>
 <h2 id="python常用模块">Python常用模块</h2>
 <ul>
-<li><a href="https://github.com/kennethreitz/requests">requests</a></li>
+<li><a href="https://github.com/kennethreitz/requests">⭐️requests</a></li>
 <li><a href="https://github.com/kennethreitz/requests-html">requests-html</a></li>
 <li><a href="https://github.com/kennethreitz/records">records</a></li>
 <li><a href="https://github.com/kennethreitz/tablib">tablib</a></li>
@@ -232,6 +232,8 @@
 <li><a href="https://github.com/JaidedAI/EasyOCR">EasyOCR</a></li>
 <li><a href="https://github.com/NathanUA/U-2-Net">U-2-Net</a></li>
 <li><a href="https://github.com/xlwings/xlwings">Excel</a></li>
+<li><a href="https://github.com/encode/httpx">⭐️httpx</a></li>
+<li><a href="https://github.com/scrapy/parsel">⭐️parsel</a></li>
 </ul>
 <h2 id="python-web开发">Python Web开发</h2>
 <ul>
@@ -320,6 +322,7 @@
 <li><a href="https://github.com/santhosh-tekuri/jsonschema">go jsonschema</a></li>
 <li><a href="https://github.com/ssrathi/go-attr">go-attr</a></li>
 <li><a href="https://github.com/google/gopacket">⭐️gopacket</a></li>
+<li><a href="https://github.com/chenyahui/gin-cache">gin-cache</a></li>
 </ul>
 <h2 id="tools">Tools</h2>
 <ul>
@@ -341,6 +344,7 @@
 <li><a href="https://github.com/google/gops">gops</a></li>
 <li><a href="https://github.com/feiin/go-xss">go-xss</a></li>
 <li><a href="https://github.com/zalando/go-keyring">go-keyring</a></li>
+<li><a href="https://github.com/Svetlitski/fcp">rust cp</a></li>
 </ul>
 
 </div>
