--- a/about/index.html
+++ b/about/index.html
@@ -337,7 +337,6 @@
 <li><a href="https://github.com/meqio/meq">MQ: meq</a></li>
 <li><a href="https://github.com/gocolly/colly">Go爬虫框架: colly</a></li>
 <li><a href="https://github.com/coredns/coredns">coredns</a></li>
-<li><a href="https://github.com/colinmarc/hdfs">⭐️A native go client for HDFS</a></li>
 <li><a href="https://github.com/fperf/redis">redis压测工具</a></li>
 <li><a href="https://github.com/Netflix-Skunkworks/bpftoolkit">Netflix bpftoolkit</a></li>
 <li><a href="https://github.com/FiloSottile/mkcert">mkcert</a></li>
@@ -346,6 +345,12 @@
 <li><a href="https://github.com/google/gops">gops</a></li>
 <li><a href="https://github.com/feiin/go-xss">go-xss</a></li>
 <li><a href="https://github.com/zalando/go-keyring">go-keyring</a></li>
+<li><a href="https://github.com/koderover/zadig">Zadig CI/CD</a></li>
+</ul>
+<h2 id="命令行工具集">命令行工具集</h2>
+<ul>
+<li><a href="https://github.com/facebook/zstd">⭐️zstd</a></li>
+<li><a href="https://github.com/colinmarc/hdfs">⭐️A native go client for HDFS</a></li>
 <li><a href="https://github.com/Svetlitski/fcp">rust cp</a></li>
 </ul>
 
