--- a/about/index.html
+++ b/about/index.html
@@ -327,6 +327,7 @@
 <li><a href="https://github.com/google/gopacket">⭐️gopacket</a></li>
 <li><a href="https://github.com/chenyahui/gin-cache">gin-cache</a></li>
 <li><a href="https://github.com/Shopify/sarama">Go Kafka客户端</a></li>
+<li><a href="https://github.com/cristalhq/base64">速度最快的 base64 库</a></li>
 </ul>
 <h2 id="tools">Tools</h2>
 <ul>
@@ -351,6 +352,7 @@
 <li><a href="https://github.com/housepower/ckman">clickhouse管理工具ckman</a></li>
 <li><a href="https://github.com/googleforgames/quilkin">google udp proxy</a></li>
 <li><a href="https://github.com/ivanceras/svgbob">Convert your ascii diagram scribbles into happy little SVG</a></li>
+<li><a href="https://github.com/GoogleContainerTools/distroless">制作小巧 Docker 镜像的终极奥义，或许是使用基于 Google Bazel 构建出的 Docker 通用镜像作为镜像基础，最小的镜像比 Alpine 还要小的多，你可以在项目网站找到 Java、Python、Node、Go、Rust 的示例。</a></li>
 </ul>
 <h2 id="安全工具">安全工具</h2>
 <ul>
@@ -361,6 +363,7 @@
 <li><a href="https://github.com/facebook/zstd">⭐️zstd</a></li>
 <li><a href="https://github.com/colinmarc/hdfs">⭐️A native go client for HDFS</a></li>
 <li><a href="https://github.com/Svetlitski/fcp">rust cp</a></li>
+<li><a href="https://github.com/BLAKE3-team/BLAKE3">BLAKE3 b3sum</a></li>
 </ul>
 
 </div>
