--- a/about/index.html
+++ b/about/index.html
@@ -318,6 +318,7 @@
 <li><a href="https://github.com/didi/gendry">gendry</a></li>
 <li><a href="https://github.com/json-iterator/go">⭐️json-iterator</a></li>
 <li><a href="https://github.com/minio/sio">⭐️sio</a></li>
+<li><a href="https://github.com/FiloSottile/age">⭐️age</a></li>
 <li><a href="https://github.com/cloudflare/tableflip">cloudflare Go程序平滑重启</a></li>
 <li><a href="https://github.com/lukechampine/adiantum">adiantum加密库</a></li>
 <li><a href="https://github.com/panjf2000/ants">ants</a></li>
