--- a/about/index.html
+++ b/about/index.html
@@ -267,12 +267,24 @@
 </ul>
 </li>
 <li>
+<p>APISIX维护库</p>
+<ul>
+<li><a href="https://github.com/apache/apisix">apisix</a></li>
+<li><a href="https://github.com/api7/lua-resty-http">lua-resty-http</a></li>
+<li><a href="https://github.com/api7/lua-resty-etcd">lua-resty-etcd</a></li>
+<li><a href="https://github.com/api7/lua-resty-ipmatcher">lua-resty-ipmatcher(hash实现)</a></li>
+<li><a href="https://github.com/api7/jsonschema">jsonschema</a></li>
+<li><a href="https://github.com/api7/lua-resty-prometheus">lua-resty-prometheus</a></li>
+<li><a href="https://github.com/api7/lua-snowflake">lua-snowflake</a></li>
+<li><a href="https://github.com/api7/lua-var-nginx-module">lua-var-nginx-module</a></li>
+</ul>
+</li>
+<li>
 <p>第三方库</p>
 <ul>
 <li><a href="https://github.com/cloudflare/lua-resty-logger-socket">lua-resty-logger-socket</a></li>
 <li><a href="https://github.com/cloudflare/lua-aho-corasick">lua-aho-corasick</a></li>
 <li><a href="https://github.com/cloudflare/nginx-google-oauth">nginx-google-oauth</a></li>
-<li><a href="https://github.com/ledgetech/lua-resty-http">lua-resty-http</a></li>
 <li><a href="https://github.com/juce/lua-resty-shell">lua-resty-shell</a></li>
 <li><a href="https://github.com/bungle/lua-resty-template">lua-resty-template</a></li>
 <li><a href="https://github.com/upyun/lua-resty-checkups">lua-resty-checkups</a></li>
@@ -284,14 +296,10 @@
 <li><a href="https://github.com/jx-sec/jxwaf">jxwaf</a></li>
 <li><a href="https://github.com/GUI/lua-resty-mail">lua-resty-mail</a></li>
 <li><a href="https://github.com/jkeys089/lua-resty-resolver">lua-resty-resolver</a></li>
-<li><a href="https://github.com/apache/apisix">apisix</a></li>
-<li><a href="https://github.com/api7/lua-resty-etcd">lua-resty-etcd</a></li>
-<li><a href="https://github.com/api7/lua-resty-ipmatcher">lua-resty-ipmatcher(hash实现)</a></li>
-<li><a href="https://github.com/api7/jsonschema">jsonschema</a></li>
-<li><a href="https://github.com/fffonion/lua-resty-acme">lua-resty-acme</a></li>
 <li><a href="https://github.com/apache/skywalking-nginx-lua">skywalking-nginx-lua</a></li>
 <li><a href="https://github.com/manoelcampos/xml2lua">xml2lua</a></li>
-<li><a href="https://github.com/TheNorthMemory/WXBizMsgCrypt">微信对接解密/加密</a></li>
+<li><a href="https://github.com/vinsonzou/WXBizMsgCrypt">微信对接解密/加密</a></li>
+<li><a href="https://github.com/fffonion/lua-resty-acme">lua-resty-acme</a></li>
 <li><a href="https://github.com/fffonion/lua-resty-multiplexer">lua-resty-multiplexer</a></li>
 <li><a href="https://github.com/fffonion/lua-resty-sniproxy">lua-resty-sniproxy</a></li>
 <li><a href="https://github.com/casbin/lua-casbin">lua-casbin</a></li>
@@ -329,6 +337,7 @@
 <li><a href="https://github.com/chenyahui/gin-cache">gin-cache</a></li>
 <li><a href="https://github.com/Shopify/sarama">Go Kafka客户端</a></li>
 <li><a href="https://github.com/cristalhq/base64">速度最快的 base64 库</a></li>
+<li><a href="https://github.com/reugn/go-quartz">go-quartz</a></li>
 </ul>
 <h2 id="tools">Tools</h2>
 <ul>
